# P3TC---MaquinaTuring

./: .gitignore  README.md  pyproject.toml
examples/: alterer.yaml  recognizer.yaml
src/tmsim/: __init__.py  __main__.py  cli.py  models.py  parser.py  simulator.py  tape.py
tests/: test_parser.py  test_simulator.py
